--- a/src/main/resources/templates/admin/kich-thuoc/sua-kich-thuoc.html
+++ b/src/main/resources/templates/admin/kich-thuoc/sua-kich-thuoc.html
@@ -5,18 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sửa kích thước</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" >
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         /* Các style tùy chỉnh có thể được đặt ở đây */
         body {
             background-color: #f8f9fa;
         }
+
         .card-header {
             background-color: #4db39b;
             color: white;
             font-weight: bold;
         }
+
         .badge-success {
             background-color: #4db39b;
         }
@@ -34,22 +36,36 @@
                 Sửa kích thước
             </div>
             <div class="card-body">
-                <form class="row g-3">
+                <form class="row g-3" th:object="${kichThuoc}" th:action="@{/admin/kich-thuoc/sua-kich-thuoc}"
+                      method="post">
                     <div class="col-md-6">
                         <label for="categoryName" class="form-label">Tên kích thước:</label>
-                        <input type="text" class="form-control" id="categoryName" placeholder="Tìm kiếm">
+                        <input type="text" class="form-control" id="categoryName" placeholder="Nike" th:field="*{ten}">
+                        <span class="text-danger" th:if="${#fields.hasErrors('ten')}" th:errors="*{ten}"></span>
                     </div>
-                    <div class="col-md-4">
-                        <label for="status" class="form-label">Trạng thái:</label>
-                        <select id="status" class="form-select">
-                            <option value="all">Tất cả</option>
-                            <option value="active">Đang sử dụng</option>
-                            <option value="inactive">Không sử dụng</option>
+                    <div class="col-md-6">
+                        <label for="categoryName" class="form-label">Mô tả:</label>
+                        <input type="text" class="form-control" id="categoryName" placeholder="Mô tả..."
+                               th:field="*{moTa}">
+                    </div>
+                    <div class="col-md-6">
+                        <label for="categoryName" class="form-label">Trạng thái:</label>
+                        <select id="status" class="form-select" name="trangThai" th:field="*{trangThai}">
+                            <option value="true">Đang hoạt động</option>
+                            <option value="false">Ngừng hoạt động</option>
                         </select>
                     </div>
+
+
                     <div class="col-md-2 align-self-end">
-                        <button type="button" class="btn badge-success"><i class="fa-solid fa-pen-to-square"></i> Sửa</button>
+                        <button type="submit" class="btn badge-success" id="statusMessage"><i
+                                class="fa-solid fa-floppy-disk"></i> Sửa
+                        </button>
                     </div>
+                    <div class="col-md-6">
+                        <input type="text" th:field="*{id}" hidden>
+                    </div>
+
                 </form>
             </div>
         </div>
