--- a/src/main/resources/templates/admin/kich-thuoc/them-kich-thuoc.html
+++ b/src/main/resources/templates/admin/kich-thuoc/them-kich-thuoc.html
@@ -34,22 +34,28 @@
                 Thêm kích thước
             </div>
             <div class="card-body">
-                <form class="row g-3">
+                <form class="row g-3" th:object="${kichThuoc}" th:action="@{/admin/kich-thuoc/them-kich-thuoc}" method="post">
                     <div class="col-md-6">
                         <label for="categoryName" class="form-label">Tên kích thước:</label>
-                        <input type="text" class="form-control" id="categoryName" placeholder="Tìm kiếm">
+                        <input type="text" class="form-control" id="categoryName" placeholder="S" th:field="*{ten}">
+                        <span class="text-danger" th:if="${#fields.hasErrors('ten')}" th:errors="*{ten}"></span>
                     </div>
-                    <div class="col-md-4">
-                        <label for="status" class="form-label">Trạng thái:</label>
-                        <select id="status" class="form-select">
-                            <option value="all">Tất cả</option>
-                            <option value="active">Đang sử dụng</option>
-                            <option value="inactive">Không sử dụng</option>
+                    <div class="col-md-6">
+                        <label for="categoryName" class="form-label">Mô tả:</label>
+                        <input type="text" class="form-control" id="categoryName" placeholder="Mô tả..." th:field="*{moTa}">
+                    </div>
+                    <div class="col-md-6">
+                        <label for="categoryName" class="form-label">Trạng thái:</label>
+                        <select id="status" class="form-select" name="trangThai" th:field="*{trangThai}" >
+                            <option value="true">Đang hoạt động</option>
+                            <option value="false">Ngừng hoạt động</option>
                         </select>
                     </div>
                     <div class="col-md-2 align-self-end">
-                        <button type="button" class="btn badge-success"><i class="fa-solid fa-floppy-disk"></i> Thêm</button>
+                        <button type="submit" class="btn badge-success" id="statusMessage"><i class="fa-solid fa-floppy-disk"></i> Thêm</button>
                     </div>
+
+
                 </form>
             </div>
         </div>
