--- a/src/main/resources/templates/admin/mau-sac/them-mau-sac.html
+++ b/src/main/resources/templates/admin/mau-sac/them-mau-sac.html
@@ -34,22 +34,30 @@
                 Thêm màu sắc
             </div>
             <div class="card-body">
-                <form class="row g-3">
+                <form class="row g-3" th:object="${mauSac}" th:action="@{/admin/mau-sac/them-mau-sac}" method="post">
                     <div class="col-md-6">
-                        <label for="categoryName" class="form-label">Tên màu sắc:</label>
-                        <input type="text" class="form-control" id="categoryName" placeholder="Tìm kiếm">
+                        <label  class="form-label">Tên màu sắc:</label>
+                        <input type="text" class="form-control"  th:field="*{ten}">
+                        <span class="text-danger" th:if="${#fields.hasErrors('ten')}" th:errors="*{ten}"></span>
                     </div>
-                    <div class="col-md-4">
-                        <label for="status" class="form-label">Trạng thái:</label>
-                        <select id="status" class="form-select">
-                            <option value="all">Tất cả</option>
-                            <option value="active">Đang sử dụng</option>
-                            <option value="inactive">Không sử dụng</option>
+                    <div class="col-md-6">
+                        <label for="colorPicker" class="form-label">Mô tả:</label>
+                        <input type="color" class="form-control" id="colorPicker" th:field="*{moTa}">
+                        <span id="colorValue"></span>
+                        <span class="text-danger" th:if="${#fields.hasErrors('ten')}" th:errors="*{moTa}"></span>
+                    </div>
+                    <div class="col-md-6">
+                        <label  class="form-label">Trạng thái:</label>
+                        <select id="status" class="form-select" name="trangThai" th:field="*{trangThai}" >
+                            <option value="true">Đang hoạt động</option>
+                            <option value="false">Ngừng hoạt động</option>
                         </select>
                     </div>
+
                     <div class="col-md-2 align-self-end">
-                        <button type="button" class="btn badge-success"><i class="fa-solid fa-floppy-disk"></i> Thêm</button>
+                        <button type="submit" class="btn badge-success" id="statusMessage"><i class="fa-solid fa-floppy-disk"></i> Thêm</button>
                     </div>
+
                 </form>
             </div>
         </div>
@@ -60,5 +68,12 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+<script>
+    const colorPicker = document.getElementById('colorPicker');
+    const colorValue = document.getElementById('colorValue');
+
+    colorPicker.addEventListener('input', function() {
+        colorValue.textContent = colorPicker.value;
+    });
+</script></body>
 </html>
