--- a/src/main/resources/templates/admin/san-pham/danh-sach-san-pham.html
+++ b/src/main/resources/templates/admin/san-pham/danh-sach-san-pham.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sản phẩm</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" >
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         /* Các style tùy chỉnh có thể được đặt ở đây */
@@ -30,52 +30,42 @@
 
 <div class="content" style="margin-left: 220px; padding: 20px;">
     <div class="container mt-3">
-        <h3><i class="fa-solid fa-bars-progress"></i> Quản lý sản phẩm</h3>
-
+        <h3> Quản lý sản phẩm</h3>
         <!-- Filter Section -->
         <div class="card mb-4">
             <div class="card-header">
                 <i class="fas fa-filter"></i> Bộ lọc
             </div>
             <div class="card-body">
-                <form class="row g-3">
+                <form class="row g-3" method="get" action="/admin/san-pham/danh-sach-san-pham">
                     <div class="col-md-2 align-self-end">
-                        <button type="button" class="btn badge-success">Tìm kiếm</button>
-                        <button type="button" class="btn badge-success">Làm mới</button>
+                        <button type="submit" class="btn badge-success">Tìm kiếm</button>
+                        <button type="button" class="btn badge-success mt-3" onclick="window.location.href='/admin/san-pham/danh-sach-san-pham'">Làm mới</button>
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-md-8">
                         <label for="categoryName" class="form-label">Tên sản phẩm:</label>
-                        <input type="text" class="form-control" id="categoryName" placeholder="Tìm kiếm">
+                        <input type="text" class="form-control" id="categoryName" placeholder="Tìm kiếm" name="tenSanPham" th:value="${tenSanPham}">
                     </div>
-                    <div class="col-md-5">
-                        <label for="status" class="form-label">Trạng thái:</label>
-                        <select id="status" class="form-select">
-                            <option value="all">Tất cả</option>
-                            <option value="active">Đang hoạt động</option>
-                            <option value="inactive">Ngừng hoạt động</option>
-                        </select>
-                    </div>
-                    <div class="col-md-2">
-                    </div>
-                    <div class="col-md-3">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-2"></div>
+                    <div class="col-md-4">
                         <label class="form-label">Hãng:</label>
-                        <select  class="form-select">
-                            <option value="all">Tất cả</option>
-                            <option value="active">Đang hoạt động</option>
-                            <option value="inactive">Ngừng hoạt động</option>
+                        <select class="form-select" name="hangId">
+                            <option value="0">Tất cả</option>
+                            <th:block th:each="hang : ${listTH}">
+                                <option th:value="${hang.id}" th:text="${hang.ten}" th:selected="${hang.id == hangId}"></option>
+                            </th:block>
                         </select>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <label class="form-label">Danh mục:</label>
-                        <select  class="form-select">
-                            <option value="all">Tất cả</option>
-                            <option value="active">Đang hoạt động</option>
-                            <option value="inactive">Ngừng hoạt động</option>
+                        <select class="form-select" name="danhMucId">
+                            <option value="0">Tất cả</option>
+                            <th:block th:each="danhMuc : ${listDM}">
+                                <option th:value="${danhMuc.id}" th:text="${danhMuc.ten}" th:selected="${danhMuc.id == danhMucId}"></option>
+                            </th:block>
                         </select>
                     </div>
-
-
-
                 </form>
             </div>
         </div>
@@ -84,83 +74,86 @@
         <div class="card">
             <div class="card-header">
                 <i class="fas fa-list"></i> Danh sách sản phẩm
-                <a type="button" class="btn btn-light float-end" th:href="@{/admin/san-pham/them-san-pham}">+ Tạo sản phẩm</a>
+                <a type="button" class="btn btn-light float-end" th:href="@{/admin/san-pham/them-san-pham}" >
+                    + Tạo sản phẩm
+                </a>
+                <a type="button" class="btn btn-light float-end" th:href="@{/admin/san-pham/san-pham-chi-tiet}" style="margin-right: 5px">Sản phẩm chi tiết</a>
+
+            </div>
+            <div>
+                <th:block th:if="${successMessageThem}">
+                    <div class="alert alert-success" th:text="${successMessageThem}"></div>
+                </th:block>
+                <th:block th:if="${successMessageSua}">
+                    <div class="alert alert-success" th:text="${successMessageSua}"></div>
+                </th:block>
             </div>
             <div class="card-body">
                 <table class="table table-striped">
                     <thead>
                     <tr>
                         <th>STT</th>
-                        <th>Mã sản phẩm</th>
                         <th>Tên sản phẩm</th>
                         <th>Số lượng tồn</th>
-                        <th>Trạng Thái</th>
+                        <th>Giá bán</th>
+                        <th>Ảnh sản phẩm</th>
+                        <th>Ngày tạo</th>
+                        <th>Ngày cập nhật</th>
+                        <th>Danh mục</th>
+                        <th>Hãng</th>
                         <th>Hành động</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Giày Slip-on sneaker13</td>
-                        <td>20-12-2023</td>
-                        <td><span class="badge bg-success">Đang sử dụng</span></td>
+                    <tr th:each="sanPham, iterStat : ${listSP}">
+                        <td th:text="${currentPage * itemsPerPage + iterStat.index + 1}"></td> <!-- STT bắt đầu từ 1 -->
+                        <td th:text="${sanPham.ten}"></td>
+                        <td th:text="${sanPham.soLuongTon}"></td>
+                        <td th:text="${sanPham.giaBan}"></td>
                         <td>
-                            <a class="btn badge-success" th:href="@{/admin/san-pham/sua-san-pham}"><i
+                            <img th:src="${sanPham.urlAnh}" alt="Ảnh sản phẩm"
+                                 style="width: 100px; height: 120px !important;">
+                        </td>
+                        <td th:text="${#dates.format(sanPham.ngayTao, 'HH:mm:ss dd/MM/yyyy')}"></td>
+                        <td th:text="${#dates.format(sanPham.ngayCapNhat, 'HH:mm:ss dd/MM/yyyy')}"></td>
+                        <td th:text="${sanPham.danhMuc.ten}"></td>
+                        <td th:text="${sanPham.hang.ten}"></td>
+                        <td style=" display: flex; flex-direction: column;">
+                            <a class="btn badge-success" th:href="@{/admin/san-pham/sua-san-pham(id=${sanPham.id})}" style="margin-bottom: 4px"><i
                                     class="fas fa-edit"></i></a>
-                            <a class="btn badge-success" th:href="@{/admin/san-pham/san-pham-chi-tiet}"><i class="fas fa-eye"></i></a>
-                            <a class="btn badge-success" th:href="@{/admin/san-pham/them-san-pham-chi-tiet}"><i class="fa-solid fa-plus"></i></a>
-
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Giày slip-on</td>
-                        <td>19-12-2023</td>
-                        <td><span class="badge bg-success">Đang sử dụng</span></td>
-                        <td>
-                            <button class="btn badge-success"><i class="fas fa-edit"></i></button>
-                            <button class="btn badge-success"><i class="fas fa-eye"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>Sneaker High - top</td>
-                        <td>09-12-2023</td>
-                        <td><span class="badge bg-success">Đang sử dụng</span></td>
-                        <td>
-                            <button class="btn badge-success"><i class="fas fa-edit"></i></button>
-                            <button class="btn badge-success"><i class="fas fa-eye"></i></button>
+                            <a class="btn badge-success" th:href="@{/admin/san-pham/trang-them-san-pham-chi-tiet}"><i
+                                    class="fa-solid fa-plus"></i></a>
                         </td>
                     </tr>
                     </tbody>
                 </table>
-                <!--                <div class="pagination justify-content-center">-->
-                <!--                    <ul class="pagination">-->
-                <!--                        <li class="page-item" th:classappend="${currentPage == 0} ? 'disabled'">-->
-                <!--                            <a class="page-link"-->
-                <!--                               th:href="@{/nhan-vien-pr/quan-ly-danh-sach-bai-viet-pr(page=${currentPage - 1}, key =${key}, idChuDe = ${idChuDe}, trangThai = ${trangThai}, idDotVietBai = ${idDotVietBai})}">Trước</a>-->
-                <!--                        </li>-->
-                <!--                        <li class="page-item" th:if="${totalPages == 0}">-->
-                <!--                            <span class="page-link">0</span>-->
-                <!--                        </li>-->
-                <!--                        <li class="page-item" th:each="i : ${#numbers.sequence(0, totalPages - 1)}"-->
-                <!--                            th:unless="${totalPages == 0}"-->
-                <!--                            th:classappend="${i == currentPage} ? 'active'">-->
-                <!--                            <a class="page-link" th:href="@{/nhan-vien-pr/quan-ly-danh-sach-bai-viet-pr(page=${i}, key =${key}, idChuDe = ${idChuDe}, trangThai = ${trangThai}, idDotVietBai = ${idDotVietBai})}"-->
-                <!--                               th:text="${i + 1}">1</a>-->
-                <!--                        </li>-->
-                <!--                        <li class="page-item" th:classappend="${currentPage + 1 == totalPages} ? 'disabled'">-->
-                <!--                            <a class="page-link"-->
-                <!--                               th:href="@{/nhan-vien-pr/quan-ly-danh-sach-bai-viet-pr(page=${currentPage + 1}, key =${key}, idChuDe = ${idChuDe}, trangThai = ${trangThai}, idDotVietBai = ${idDotVietBai})}">Tiếp</a>-->
-                <!--                        </li>-->
-                <!--                    </ul>-->
-                <!--                </div>-->
+                <div class="pagination justify-content-center">
+                    <ul class="pagination">
+                        <li class="page-item" th:classappend="${currentPage == 0} ? 'disabled'">
+                            <a class="page-link" th:href="@{/admin/san-pham/danh-sach-san-pham(page=0)}">First</a>
+                        </li>
+                        <li class="page-item" th:classappend="${currentPage > 0} ? '' : 'disabled'">
+                            <a class="page-link"
+                               th:href="@{/admin/san-pham/danh-sach-san-pham(page=${currentPage - 1})}">Previous</a>
+                        </li>
+                        <li class="page-item disabled">
+                            <span class="page-link"
+                                  th:text="${'Page ' + (currentPage + 1) + ' of ' + totalPages}"></span>
+                        </li>
+                        <li class="page-item" th:classappend="${currentPage < totalPages - 1} ? '' : 'disabled'">
+                            <a class="page-link"
+                               th:href="@{/admin/san-pham/danh-sach-san-pham(page=${currentPage + 1})}">Next</a>
+                        </li>
+                        <li class="page-item" th:classappend="${currentPage == totalPages - 1} ? 'disabled'">
+                            <a class="page-link"
+                               th:href="@{/admin/san-pham/danh-sach-san-pham(page=${totalPages - 1})}">Last</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
 </div>
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
