--- a/src/main/resources/templates/admin/san-pham/san-pham-chi-tiet.html
+++ b/src/main/resources/templates/admin/san-pham/san-pham-chi-tiet.html
@@ -22,6 +22,48 @@
         .badge-success {
             background-color: #4db39b;
         }
+        .custom-alert {
+            position: fixed;
+            top: 20px;  /* Cách từ đỉnh */
+            right: 20px;  /* Cách từ bên phải */
+            background-color: #4CAF50;  /* Màu nền thông báo thành công */
+            color: white;  /* Màu chữ */
+            padding: 15px;  /* Padding xung quanh */
+            border-radius: 5px;  /* Bo góc */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);  /* Đổ bóng */
+            z-index: 9999;  /* Đảm bảo thông báo luôn nằm trên cùng */
+            opacity: 0;  /* Ban đầu ẩn */
+            visibility: hidden;  /* Không hiển thị */
+            transition: opacity 0.5s ease-in-out, visibility 0.5s;  /* Hiệu ứng chuyển đổi */
+        }
+
+        .custom-alert {
+            opacity: 1;  /* Hiển thị thông báo */
+            visibility: visible;  /* Đặt thông báo là có thể nhìn thấy */
+        }.status-green {
+             background-color: #d4f8e8; /* Màu nền xanh nhạt */
+             color: #28A745; /* Màu chữ xanh lá */
+             border: 1px solid #28A745; /* Đường viền màu xanh lá */
+             border-radius: 15px; /* Bo tròn các góc */
+             padding: 5px 10px; /* Khoảng cách bên trong button */
+             font-size: 14px; /* Kích thước chữ */
+             font-weight: bold; /* Chữ đậm */
+             display: inline-block; /* Hiển thị nội dung như một khối nhỏ */
+             text-align: center; /* Canh giữa nội dung */
+
+         }
+
+        .status-yellow {
+            background-color: #e1e3bb; /* Màu nền xanh nhạt */
+            color: #bea502; /* Màu chữ xanh lá */
+            border: 1px solid #bea502; /* Đường viền màu xanh lá */
+            border-radius: 15px; /* Bo tròn các góc */
+            padding: 5px 10px; /* Khoảng cách bên trong button */
+            font-size: 14px; /* Kích thước chữ */
+            font-weight: bold; /* Chữ đậm */
+            display: inline-block; /* Hiển thị nội dung như một khối nhỏ */
+            text-align: center; /* Canh giữa nội dung */
+        }
     </style>
 </head>
 <body>
@@ -29,8 +71,14 @@
 <div th:replace="fragment/navbar :: navbar"></div>
 
 <div class="content" style="margin-left: 220px; padding: 20px;">
+    <!--    Thông báo-->
+    <div class="custom-alert success" id="statusMessage" th:text="${Add}"
+         th:if="${Add != null}"><i class="fa-solid fa-circle-check"></i></div>
+    <div class="custom-alert success" id="statusMessage" th:text="${Update}"
+         th:if="${Update != null}">ok</div>
+    <!--    Thông báo-->
     <div class="container mt-3">
-        <h3><i class="fa-solid fa-bars-progress"></i> Quản lý sản phẩm chi tiết</h3>
+        <h3> Quản lý sản phẩm chi tiết</h3>
 
         <!-- Filter Section -->
         <div class="card mb-4">
@@ -38,67 +86,61 @@
                 <i class="fas fa-filter"></i> Bộ lọc
             </div>
             <div class="card-body">
-                <form class="row g-3">
+                <form class="row g-3" th:action="@{/admin/san-pham/san-pham-chi-tiet}" method="get">
                     <div class="col-md-2 align-self-end">
-                        <button type="button" class="btn badge-success">Tìm kiếm</button>
-                        <button type="button" class="btn badge-success">Làm mới</button>
+                        <button type="submit" class="btn badge-success">Tìm kiếm</button>
+                        <button type="reset" class="btn badge-success">Làm mới</button>
                     </div>
                     <div class="col-md-5">
                         <label for="categoryName" class="form-label">Tên sản phẩm:</label>
-                        <input type="text" class="form-control" id="categoryName" placeholder="Tìm kiếm">
+                        <input type="text" class="form-control" id="categoryName"
+                               placeholder="Tìm kiếm" name="tenSP" th:value="${tenSP}">
                     </div>
                     <div class="col-md-5">
                         <label for="status" class="form-label">Trạng thái:</label>
-                        <select id="status" class="form-select">
-                            <option value="all">Tất cả</option>
-                            <option value="active">Đang hoạt động</option>
-                            <option value="inactive">Ngừng hoạt động</option>
+                        <select id="status" class="form-select" name="trangThai">
+                            <option value="" th:selected="${trangThai == null}">Tất cả</option>
+                            <option value="true" th:selected="${trangThai == true}">Đang hoạt động</option>
+                            <option value="false" th:selected="${trangThai == false}">Ngừng hoạt động</option>
                         </select>
                     </div>
                     <div class="col-md-2"></div>
                     <div class="col-md-2">
                         <label class="form-label">Hãng:</label>
-                        <select  class="form-select">
-                            <option value="all">Tất cả</option>
-                            <option value="active">Đang hoạt động</option>
-                            <option value="inactive">Ngừng hoạt động</option>
+                        <select  class="form-select" name="idH">
+                            <option value="">Tất cả</option>
+                            <option th:each="h : ${listH}" th:value="${h.id}" th:text="${h.ten}"></option>
                         </select>
                     </div>
                     <div class="col-md-2">
                         <label class="form-label">Danh mục:</label>
-                        <select  class="form-select">
-                            <option value="all">Tất cả</option>
-                            <option value="active">Đang hoạt động</option>
-                            <option value="inactive">Ngừng hoạt động</option>
+                        <select  class="form-select" name="idDM">
+                            <option value="">Tất cả</option>
+                            <option th:each="dm : ${listDM}" th:value="${dm.id}" th:text="${dm.ten}"></option>
                         </select>
                     </div>
                     <div class="col-md-2">
                         <label class="form-label">Chất liệu:</label>
-                        <select  class="form-select">
-                            <option value="all">Tất cả</option>
-                            <option value="active">Đang hoạt động</option>
-                            <option value="inactive">Ngừng hoạt động</option>
+                        <select  class="form-select" name="idCL">
+                            <option value="">Tất cả</option>
+                            <option th:each="cl : ${listCL}" th:value="${cl.id}" th:text="${cl.ten}"></option>
                         </select>
                     </div>
                     <div class="col-md-2">
                         <label class="form-label">Kích thước:</label>
-                        <select  class="form-select">
-                            <option value="all">Tất cả</option>
-                            <option value="active">Đang hoạt động</option>
-                            <option value="inactive">Ngừng hoạt động</option>
+                        <select  class="form-select" name="idKT">
+                            <option value="">Tất cả</option>
+                            <option th:each="kt : ${listKT}" th:value="${kt.id}" th:text="${kt.ten}"></option>
                         </select>
                     </div>
                     <div class="col-md-2">
                         <label class="form-label">Màu sắc:</label>
-                        <select  class="form-select">
-                            <option value="all">Tất cả</option>
-                            <option value="active">Đang hoạt động</option>
-                            <option value="inactive">Ngừng hoạt động</option>
+                        <select  class="form-select" name="idMS">
+                            <option value="">Tất cả</option>
+                            <option th:each="ms : ${listMS}" th:value="${ms.id}" th:text="${ms.ten}"
+                                    th:style="'background-color:' + ${ms.moTa} + '; color: #fff;'"></option>
                         </select>
                     </div>
-
-
-
                 </form>
             </div>
         </div>
@@ -107,7 +149,9 @@
         <div class="card">
             <div class="card-header">
                 <i class="fas fa-list"></i> Danh sách sản phẩm chi tiết
-<!--                <a type="button" class="btn btn-light float-end" th:href="@{/admin/san-pham/them-san-pham}">+ Tạo mới sản phẩm</a>-->
+                <a type="button" class="btn btn-light float-end" th:href="@{/admin/san-pham/trang-them-san-pham-chi-tiet}" >
+                    + Tạo mới
+                </a>
             </div>
             <div class="card-body">
                 <table class="table table-striped">
@@ -117,7 +161,8 @@
                         <th>Ảnh</th>
                         <th>Tên sản phẩm</th>
                         <th>Số lượng</th>
-                        <th>Giá bán</th>
+<!--                        <th>Giá bán</th>-->
+                        <th>Chất liệu</th>
                         <th>Kích thước</th>
                         <th>Màu sắc</th>
                         <th>Trạng Thái</th>
@@ -125,60 +170,51 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Giày Slip-on sneaker13</td>
-                        <td>20-12-2023</td>
-                        <td><span class="badge bg-success">Đang sử dụng</span></td>
+                    <tr th:each="spct,i : ${itemPage}">
+                        <td th:text="${i.count}"></td>
+                        <td>Ảnh spct</td>
+                        <td th:text="${spct.sanPham.ten}"></td>
+                        <td th:text="${spct.soLuong}"></td>
+<!--                        <td th:text="${spct.giaBan}"></td>-->
+                        <td th:text="${spct.chatLieu.ten}"></td>
+                        <td th:text="${spct.kichThuoc.ten}"></td>
+                        <td th:text="${spct.mauSac.ten}"></td>
                         <td>
-                            <a class="btn badge-success" th:href="@{/admin/san-pham/sua-san-pham-chi-tiet}"><i
+                            <span th:if="${spct.trangThai == true}" class="status-green">Đang hoạt động</span>
+                            <span th:if="${spct.trangThai == false}" class="status-yellow">Ngừng hoạt động</span>
+                        </td>
+                        <td>
+                            <a class="btn badge-success" th:href="@{/admin/san-pham/trang-sua-san-pham-chi-tiet/{id} (id=${spct.id})}"><i
                                     class="fas fa-edit"></i></a>
-                            <a class="btn badge-success" th:href="@{/admin/san-pham/xem-san-pham-chi-tiet}"><i class="fas fa-eye"></i></a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Giày slip-on</td>
-                        <td>19-12-2023</td>
-                        <td><span class="badge bg-success">Đang sử dụng</span></td>
-                        <td>
-                            <button class="btn badge-success"><i class="fas fa-edit"></i></button>
-                            <button class="btn badge-success"><i class="fas fa-eye"></i></button>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>Sneaker High - top</td>
-                        <td>09-12-2023</td>
-                        <td><span class="badge bg-success">Đang sử dụng</span></td>
-                        <td>
-                            <button class="btn badge-success"><i class="fas fa-edit"></i></button>
-                            <button class="btn badge-success"><i class="fas fa-eye"></i></button>
                         </td>
                     </tr>
                     </tbody>
                 </table>
-                <!--                <div class="pagination justify-content-center">-->
-                <!--                    <ul class="pagination">-->
-                <!--                        <li class="page-item" th:classappend="${currentPage == 0} ? 'disabled'">-->
-                <!--                            <a class="page-link"-->
-                <!--                               th:href="@{/nhan-vien-pr/quan-ly-danh-sach-bai-viet-pr(page=${currentPage - 1}, key =${key}, idChuDe = ${idChuDe}, trangThai = ${trangThai}, idDotVietBai = ${idDotVietBai})}">Trước</a>-->
-                <!--                        </li>-->
-                <!--                        <li class="page-item" th:if="${totalPages == 0}">-->
-                <!--                            <span class="page-link">0</span>-->
-                <!--                        </li>-->
-                <!--                        <li class="page-item" th:each="i : ${#numbers.sequence(0, totalPages - 1)}"-->
-                <!--                            th:unless="${totalPages == 0}"-->
-                <!--                            th:classappend="${i == currentPage} ? 'active'">-->
-                <!--                            <a class="page-link" th:href="@{/nhan-vien-pr/quan-ly-danh-sach-bai-viet-pr(page=${i}, key =${key}, idChuDe = ${idChuDe}, trangThai = ${trangThai}, idDotVietBai = ${idDotVietBai})}"-->
-                <!--                               th:text="${i + 1}">1</a>-->
-                <!--                        </li>-->
-                <!--                        <li class="page-item" th:classappend="${currentPage + 1 == totalPages} ? 'disabled'">-->
-                <!--                            <a class="page-link"-->
-                <!--                               th:href="@{/nhan-vien-pr/quan-ly-danh-sach-bai-viet-pr(page=${currentPage + 1}, key =${key}, idChuDe = ${idChuDe}, trangThai = ${trangThai}, idDotVietBai = ${idDotVietBai})}">Tiếp</a>-->
-                <!--                        </li>-->
-                <!--                    </ul>-->
-                <!--                </div>-->
+                <div class="pagination justify-content-center">
+                    <ul class="pagination">
+                        <li class="page-item" th:classappend="${currentPage == 0} ? 'disabled'">
+                            <a class="page-link"
+                               th:href="@{/admin/san-pham/san-pham-chi-tiet(page=${currentPage - 1}, tenSP=${tenSP}, trangThai=${trangThai},
+                               idCL=${idCL}, idKT=${idKT}, idMS=${idMS}, idH=${idH}, idDM=${idDM})}">Trước</a>
+                        </li>
+                        <li class="page-item" th:if="${totalPages == 0}">
+                            <span class="page-link">0</span>
+                        </li>
+                        <li class="page-item" th:each="i : ${#numbers.sequence(0, totalPages - 1)}"
+                            th:unless="${totalPages == 0}"
+                            th:classappend="${i == currentPage} ? 'active'">
+                            <a class="page-link"
+                               th:href="@{/admin/san-pham/san-pham-chi-tiet(page=${i}, tenSP=${tenSP}, trangThai=${trangThai},
+                               idCL=${idCL}, idKT=${idKT}, idMS=${idMS}, idH=${idH}, idDM=${idDM})}"
+                               th:text="${i + 1}">1</a>
+                        </li>
+                        <li class="page-item" th:classappend="${currentPage + 1 == totalPages} ? 'disabled'">
+                            <a class="page-link"
+                               th:href="@{/admin/san-pham/san-pham-chi-tiet(page=${currentPage + 1}, tenSP=${tenSP}, trangThai=${trangThai},
+                               idCL=${idCL}, idKT=${idKT}, idMS=${idMS}, idH=${idH}, idDM=${idDM})}">Tiếp</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
