--- a/src/main/resources/templates/admin/tai-khoan-khach-hang/sua-tai-khoan-khach-hang.html
+++ b/src/main/resources/templates/admin/tai-khoan-khach-hang/sua-tai-khoan-khach-hang.html
@@ -3,12 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sửa tài khoản khách hàng</title>
+    <title>Chỉnh sửa tài khoản khách hàng</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" >
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         /* Các style tùy chỉnh có thể được đặt ở đây */
+        body {
+            background-color: #f8f9fa;
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            /*background-color: #f5f5f5;*/
+        }
+
+        .card-header {
+            background-color: #4db39b;
+            color: white;
+        }
+
+        .badge-success {
+            background-color: #4db39b;
+        }
+
+        .upload-section {
+            width: 30%;
+            text-align: center;
+            padding-top: 30px;
+        }
+
+        .upload-section img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            background-color: #e0e0e0;
+            display: inline-block;
+            position: relative;
+        }
+
+        .upload-section input[type="file"] {
+            display: none;
+            padding: 100px;
+        }
+
+
+
+
     </style>
 </head>
 <body>
@@ -16,10 +56,128 @@
 <div th:replace="fragment/navbar :: navbar"></div>
 
 <div class="content" style="margin-left: 220px; padding: 20px;">
-    <h1>Sua tk kh</h1>
+    <div class="container mt-3">
+        <div class="card mb-4">
+            <div class="card-header">
+                Chỉnh sửa tài khoản khách hàng
+            </div>
+            <div class="card-body">
+                <div class="container-fuild">
+                    <form th:object="${nguoiDung}" th:action="@{/admin/tai-khoan-khach-hang/sua-tai-khoan-khach-hang}"
+                          method="POST">
+                        <div class="container-fuild">
+                            <div class="row">
+                                <div class="col-4 upload-section">
+                                    <div class=""><h5>Ảnh đại diện</h5></div>
+                                    <div class="mt-5">
+                                        <img id="avatar" th:src="*{anhDaiDien}"/>
+                                    </div>
+                                    <div class="mt-1">
+                                        <label for="avatarUpload">Chọn ảnh</label><br>
+                                        <input class="form-control" type="file" id="avatarUpload" accept="image/*" name="anhDaiDien"
+                                               onchange="previewImage(event)"/>
+                                    </div>
+
+                                </div>
+                                <div class="col-4">
+
+
+                                    <div class="form-group mb-3">
+                                        <label class="form-lable">Tên khách hàng</label>
+                                        <input class="form-control" type="text" id="name" th:field="*{ten}"
+                                               placeholder="Nguyễn Văn A">
+                                        <span class="text-danger" th:if="${#fields.hasErrors('ten')}"
+                                              th:errors="*{ten}"></span>
+                                    </div>
+
+                                    <div class="form-group mb-3">
+                                        <label class="form-lable" for="email">Email</label>
+                                        <input class="form-control" type="email" id="email" th:field="*{email}"
+                                               placeholder="example@gmail.com">
+                                        <span class="text-danger" th:if="${#fields.hasErrors('email')}"
+                                              th:errors="*{email}"></span>
+                                        <div th:if="${error}" th:text="${error}" style="color: red;"></div>
+                                    </div>
+
+                                    <div class="form-group mb-3">
+                                        <label class="form-lable" for="phone">Số điện thoại</label>
+                                        <input class="form-control" type="text" id="phone" th:field="*{sdt}"
+                                               placeholder="0123456789">
+                                        <span class="text-danger" th:if="${#fields.hasErrors('sdt')}"
+                                              th:errors="*{sdt}"></span>
+                                        <div th:if="${error}" th:text="${error}" style="color: red;"></div>
+                                    </div>
+
+                                    <div class="form-group mb-3">
+                                        <label class="form-lable" for="birthdate">Ngày sinh</label>
+                                        <input class="form-control" type="date" id="birthdate" th:field="*{ngaySinh}"
+                                               value="2004-06-02">
+                                        <span class="text-danger" th:if="${#fields.hasErrors('ngaySinh')}"
+                                              th:errors="*{ngaySinh}"></span>
+                                    </div>
+                                    <div class="form-group mb-3">
+                                        <input class="form-control" type="text" id="ma" th:field="*{ma}" hidden>
+                                        <input class="form-control" type="text" id="id" th:field="*{id}" hidden>
+                                        <input class="form-control" type="text" id="role" th:field="*{vaiTro.id}" hidden>
+                                        <input class="form-control" type="text" id="password" th:field="*{matKhau}" hidden>
+                                        <span class="text-danger" th:if="${#fields.hasErrors('matKhau')}"
+                                              th:errors="*{matKhau}"></span>
+                                    </div>
+
+
+                                </div>
+                                <div class="col-4">
+                                    <div class="form-group mb-3">
+                                        <label class="form-lable" style="margin-right: 10px">Giới tính</label>
+                                        <input type="radio" id="male" name="gioiTinh" value="true"
+                                               th:field="*{gioiTinh}" checked>
+                                        <label for="male">Nam</label>
+                                        <input type="radio" id="female" name="gioiTinh" value="false"
+                                               th:field="*{gioiTinh}">
+                                        <label for="female">Nữ</label>
+                                    </div>
+
+                                    <div class="form-group mb-3">
+                                        <label class="form-lable" for="address">Địa chỉ</label>
+                                        <textarea class="form-control" type="text" rows="4" id="address"
+                                                  th:field="*{diaChi}"
+                                                  placeholder="Số nhà..."></textarea>
+                                        <span class="text-danger" th:if="${#fields.hasErrors('diaChi')}"
+                                              th:errors="*{diaChi}"></span>
+                                    </div>
+
+                                    <div class="form-group ">
+                                        <label class="form-lable" for="status">Trạng thái</label>
+                                        <select id="status" class="form-select" th:field="*{trangThai}">
+                                            <option value="true">Kích hoạt</option>
+                                            <option value="false">Không kích hoạt</option>
+                                        </select>
+                                    </div>
+
+                                    <div class="mt-4">
+                                        <button type="submit" id="statusMessage" class="btn badge-success">Sửa</button>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    function previewImage(event) {
+        const reader = new FileReader();
+        reader.onload = function () {
+            const output = document.getElementById('avatar');
+            output.src = reader.result;
+        };
+        reader.readAsDataURL(event.target.files[0]);
+    }
+</script>
 </body>
 </html>
